support cilium native vpc mode
